[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[options]
package_dir = "gpt_pydantic_tools"
packages = ["gpt_pydantic_tools"]

[project]
name = "gpt_pydantic_tools"
version = "0.2"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
description = "Define GPT tool schemas using Pydantic."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
license = {text = "MIT License"}
keywords = ["gpt", "ai", "tool", "schemas", "pydantic", "json"]
readme = "README.md"
dependencies=[
    "attrs>=23.2.0",
    "attrs_strict>=1.0.1",
    "pydantic>=2.7.1",
    "jsonschema>=4.22.0"
]

[project.urls]
repository = "https://github.com/carlosplanchon/gpt_pydantic_tools.git"
