[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt_pydantic_tools"
version = "0.3"
authors = [
    {name = "Carlos A. Planchón", email = "carlosandresplanchonprestes@gmail.com"}
]
requires-python = ">=3.12"
description = "Define GPT tool schemas using Pydantic."
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

license = "MIT"
license-files = ["LICENSE"]

keywords = ["gpt", "ai", "tool", "schemas", "pydantic", "json"]
readme = "README.md"
dependencies=[
    "attrs>=23.2.0",
    "attrs_strict>=1.0.1",
    "pydantic>=2.7.1",
    "jsonschema>=4.22.0"
]

[project.urls]
Repository = "https://github.com/carlosplanchon/gpt_pydantic_tools.git"

[tool.setuptools]
packages = ["gpt_pydantic_tools"]
